src/grammar.txt
// LEXER

expression -> literal
							| binary
							| unary
							| grouping;

literal -> INT | STR | "true" | "false" | "null";
binary -> expression operator expression;
grouping -> "(" expression ")";
unary -> ("-" | "!") expression;
operator -> "==" | "!=" | "<" | "<=" | ">" | ">="
               | "+"  | "-"  | "*" | "/" | "%" ;

// PARSER
expression     → equality ;
equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary
               | primary ;
primary        → NUMBER | STRING | "true" | "false" | "nil"
               | "(" expression ")" ;
